--- a/SocialNetworkFE/src/app/components/form-post/form-post.component.html
+++ b/SocialNetworkFE/src/app/components/form-post/form-post.component.html
@@ -7,31 +7,23 @@
         <mat-card-title>{{ userAuth.fullName }}</mat-card-title>
       </div>
     </div>
+    <input type="text" placeholder="Title.." [(ngModel)]="postItem.title" />
     <input
-      type="text"
-      placeholder="Title.."
-      [(ngModel)]="postItem.title"
-      maxlength="40"
-    />
-    <input
-      type="textarea"
-      placeholder="What's on your mind?"
-      spellcheck="false"
-      [(ngModel)]="postItem.description"
-      maxlength="255"
-    />
+    type="textarea"
+    placeholder="What's on your mind?"
+    spellcheck="false"
+    [(ngModel)]="postItem.description"
+    required
+  />
     <input
       type="text"
       placeholder="Url image ..."
       [(ngModel)]="postItem.image"
-      maxlength="255"
     />
     <div class="imgContainer">
       <img [src]="postItem.image" alt="" />
     </div>
 
-    <button (click)="onSubmit()" [disabled]="isEmpty()" routerLink="/posts">
-      Post
-    </button>
+    <button (click)="onSubmit()" routerLink="/posts">Post</button>
   </section>
 </div>
